--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Flappy Free!</title>
         
-        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <meta name="viewport" content="width=device-width, user-scalable=yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="apple-touch-icon" href="assets/icon.png">
         <link rel="apple-touch-icon" sizes="120x120" href="assets/icon-120.png">
