--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="apple-touch-icon" sizes="120x120" href="assets/icon-120.png">
         <style>
             body {
-                background-image:url('background.jpg');
+                background-image:url('background.png');
                 background: #abc;
                 margin: 0;
                 padding: 0;
