--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 margin: 0 auto;
                 max-height: 1280px;
                 max-width: 720px;
-                height : 100%;
-                width:100%;
+                height : auto;
+                width : auto;
                 /*
                                max-height: 568px;
                     max-width: 320px;
