--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>jQuery One Page Scroll by Pete R. | The Pete Design</title>
+        <title>Flappy Free By Potu Apps.</title>
         <meta name="title" content="jQuery One Page Scroll by Pete R. | The Pete Design" />
         <meta name="description" content="Create an Apple-like one page scroller website (iPhone 5S website) with One Page Scroll plugin" />
         <link rel="image_src" href="/images/notify_better_image.png" />
