improving the web page :)

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Flappy Free By Potu Apps.</title>
-        <meta name="title" content="jQuery One Page Scroll by Pete R. | The Pete Design" />
-        <meta name="description" content="Create an Apple-like one page scroller website (iPhone 5S website) with One Page Scroll plugin" />
-        <link rel="image_src" href="/images/notify_better_image.png" />
+        <meta name="title" content="Flappy Free By Potu Game Studio." />
+        <meta name="description" content="Disfruta de un juego recreado por Venezolanos para Venezolanos inspirado en Flappy Bird gracias a Pete Design por el plugin 
+              que permitio hacer una página tan espléndida." />
+        <link rel="image_src" href="/images/image1pajaro.png" />
 
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="apple-touch-icon" href="assets/icon.png">
+        <link rel="apple-touch-icon" href="images/favicon.png">
         <link rel="apple-touch-icon" sizes="120x120" href="assets/icon-120.png">
-        <link rel="shortcut icon" id="favicon" href="favicon.png"> 
+        <link rel="shortcut icon" id="favicon" href="images/favicon.png"> 
         <meta name="author" content="Pete R.">
-        <link rel="canonical" href="http://www.thepetedesign.com/demos/onepage_scroll_demo.html" />
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Pacifico:400' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
