--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="apple-touch-icon" href="images/favicon.png">
         <link rel="apple-touch-icon" sizes="120x120" href="assets/icon-120.png">
         <link rel="shortcut icon" id="favicon" href="images/favicon.png"> 
-        <meta name="author" content="Pete R.">
+        <meta name="author" content="Luis Fernández & Javier Segovia.">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Pacifico:400' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
