--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Flappy Free By Potu Apps.</title>
-        <meta name="title" content="Flappy Free By Potu Game Studio." />
+        <title>Flappy Free By Potú Game Studio.</title>
+        <meta name="title" content="Flappy Free By Potú Game Studio." />
         <meta name="description" content="Disfruta de un juego recreado por Venezolanos para Venezolanos inspirado en Flappy Bird gracias a Pete Design por el plugin 
               que permitio hacer una página tan espléndida." />
         <link rel="image_src" href="/images/image1pajaro.png" />
