--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             #contenedor .carousel-inner{
                 align-self: center;
                 margin-left: 90px;
-
+                padding-right: 150px; 
             }
             #screen{
                 padding-top: 30px;
